fix alignment

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body {
   background-image: url("../public/background.jpeg");
   background-size: cover;
   background-color: #e0e0e0;
-  line-height: 1.2;
+  line-height: 1;
   color: gray;
 }
 ol,
@@ -29,16 +29,7 @@ h1 {
   width: 96%;
   font-size: 14px;
   display: flex;
-  .logo {
-    padding: 30px 10px;
-    margin: auto;
-    img {
-      width: 150px;
-      @media screen and (max-width: 600px) {
-        width: 100%;
-      }
-    }
-  }
+ 
   .menu {
     display: flex;
     justify-content: flex-end;
@@ -52,7 +43,16 @@ h1 {
     }
   }
 }
-
+.logo {
+  padding: 30px 10px;
+  margin: auto;
+  img {
+    width: 150px;
+    @media screen and (max-width: 600px) {
+      width: 100%;
+    }
+  }
+}
 .App-content {
   display: flex;
   flex-direction: row;
@@ -71,42 +71,56 @@ h1 {
     border: 1px solid gray;
   }
   section.left {
-    opacity: 0.8;
+    opacity: 0.9;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     img {
       width: 30px;
       border-radius: 50%;
-      display: block;
       padding: 10px;
     }
   }
   section.right {
-    opacity: 0.8;
+    opacity: 0.9;
     flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
     .horizontal {
-      background-color: #e0e0e0;
-      margin: auto;
-      margin-bottom: 10px;
+      margin: 0 auto;
       border-radius: 10px;
-      width: 70%;
+      width: fit-content;
       text-align: center;
-      padding: 5px 0;
-    }
+      cursor: pointer;
+      width: 99%;
+      padding: 10px 0;
+      border: 1px solid #e0e0e0;
+      background-color: #e0e0e0;
+      &.clicked {
+        background-color: transparent;
+      }
+  }
     .vertical {
       display: flex;
       justify-content: space-around;
+      margin: 10px 0;
       div {
         background-color: #e0e0e0;
         width: 30%;
         margin: 10px 5px;
         text-align: center;
         border-radius: 10px;
-        padding: 40px 20px;
+        padding: 30px;
         @media screen and (max-width: 1000px) {
           width: 100%;
           height: fit-content;
           margin: 10px auto;
         }
-        /* display: none; */
+      }
+      &.hidden {
+        opacity: 0;
       }
     }
   }
@@ -124,8 +138,7 @@ footer {
   width: 100%;
   font-size: 12px;
   text-align: center;
-  height: 30px;
-  padding-top: 10px;
+  height: 40px;
 }
 
 a,
